Fixed popup feature issue of X mark not visible on mobile devices

--- a/includes/features/popup/popup-styles.css
+++ b/includes/features/popup/popup-styles.css
@@ -53,3 +53,33 @@
     width: auto;
     letter-spacing: 1px;
 }    
+@media(max-width:768px){
+.en-afwp{
+    width:100%;
+    padding:15px;
+  }
+  .en-apft {
+      font-size: 45px;
+  }
+  .en-apf p {
+      font-size: 15px;
+  }
+  .en-apbtn a{
+    font-size: 16px;
+  }
+  .en-apbtn button{
+    font-size: 14px;
+  }
+}
+@media(max-width:500px){
+  .en-apf{
+    padding:20px;
+  }
+  .en-apft {     
+      font-size: 30px;
+      margin-top:20px;
+  }
+  .en-apbtn a{
+    padding: 20px 25px;
+  }
+}
